WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161127
RenderMathMLRow::firstLineBaseline does not need to be overridden in RenderMathMLMenclose
https://bugs.webkit.org/show_bug.cgi?id=161127
Summary
RenderMathMLRow::firstLineBaseline does not need to be overridden in RenderMa...
Frédéric Wang (:fredw)
Reported
2016-08-23 23:41:54 PDT
RenderMathMLRow::firstLineBaseline already provides the correct calculation of ascent for non-empty menclose. Empty menclose are not used in practice so the calculation is irrelevant but aligning on mrow seems fine. This will allow to get rid of the m_ascent member and will help to keep good vertical alignment of the 'D' in
bug 161126
.
Attachments
Patch
(4.71 KB, patch)
2016-08-23 23:51 PDT
,
Frédéric Wang (:fredw)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Frédéric Wang (:fredw)
Comment 1
2016-08-23 23:51:27 PDT
Created
attachment 286838
[details]
Patch
Frédéric Wang (:fredw)
Comment 2
2016-08-24 22:27:59 PDT
Comment on
attachment 286838
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=286838&action=review
> Source/WebCore/ChangeLog:10 > + calculated value is irrelevant. Aligning on mrow (i.e. leaving firstLineBaseline undefined)
Here it's actually "to 0" rather than "undefined".
Frédéric Wang (:fredw)
Comment 3
2016-08-28 01:43:07 PDT
Committed
r205099
: <
http://trac.webkit.org/changeset/205099
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug