RenderMathMLRow::firstLineBaseline does not need to be overridden in RenderMathMLMenclose https://bugs.webkit.org/show_bug.cgi?id=161127

Patch by Frederic Wang <fwang@igalia.com> on 2016-08-28
Reviewed by Darin Adler.

RenderMathMLRow::firstLineBaseline already provides the correct calculation of ascent for
non-empty menclose elements. Empty menclose elements are not used in practice so the
calculated value is irrelevant. Aligning on mrow (i.e. leaving firstLineBaseline to 0)
is fine. This change allows to get rid of the m_ascent member and helps to keep good baseline
alignment when the zoom level changes (bug 161126).

No new tests, already covered by existing tests.

* rendering/mathml/RenderMathMLMenclose.cpp:
(WebCore::RenderMathMLMenclose::RenderMathMLMenclose): Remove initialization of m_ascent.
(WebCore::RenderMathMLMenclose::layoutBlock): No need to calculate m_ascent. The height and
content location can be determined without introducing local variables ascent or descent.
(WebCore::RenderMathMLMenclose::firstLineBaseline): Deleted. We just use the implementation
from RenderMathMLRow.
* rendering/mathml/RenderMathMLMenclose.h: Delete m_ascent and do not override
firstLineBaseline.

Canonical link: https://commits.webkit.org/179473@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205099 268f45cc-cd09-0410-ab3c-d52691b4dbfc